FIX: sidebar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 *{
   background-color: #161722;
   color: white;
-}
-
-button {
   -webkit-tap-highlight-color: transparent;
 }
